working on height issues on mobile on home.css

--- a/pages/home/Home.css
+++ b/pages/home/Home.css
@@ -11,7 +11,7 @@
 
 
 .home-section {
-    max-height: 100dvh;
+    max-height: 100vh;
     width: 100vw;         
     max-width: 100vw;    
     display: flex;
